--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                         <p class="helpText winScoreHelpText">(default is 50)</p>
                     </div>
                     <!-- NEW GAME BUTTON -->
-                    <button class="btn-new"><img class="buttonImg" height="20" src="/src/Images/new.svg" alt="img">NEW
+                    <button class="btn-new"><img class="buttonImg" height="20" src="src/Images/new.svg" alt="img">NEW
                         GAME</button>
                     <p class="helpText newGameHelpText">( or press N key )</p>
                     <!-- ROLL THE DICE BUTTON -->
-                    <button class="btn-roll"><img class="buttonImg" height="20" src="/src/Images/rollDice.svg" alt="img">Roll
+                    <button class="btn-roll"><img class="buttonImg" height="20" src="src/Images/rollDice.svg" alt="img">Roll
                         Dice</button>
                     <p class="helpText rollDiceHelpText">( or press Space key )</p>
                     <!-- HOLD BUTTON -->
-                    <button class="btn-hold"><img class="buttonImg" height="20" src="/src/Images/hold.svg" alt="img">HOLD</button>
+                    <button class="btn-hold"><img class="buttonImg" height="20" src="src/Images/hold.svg" alt="img">HOLD</button>
                     <p class="helpText holdHelpText">( or press S key )</p>
                     <!-- THE FIRST DICE -->
                     <div id="view">
